# priroda

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Procfile  README.md  Rocket.toml  example.rs  positioning.css  rust-toolchain  style.css  web.sh  zoom_mir.js
.github/workflows/: build.yml
crates/priroda/: Cargo.toml
crates/priroda_web/: Cargo.toml
crates/priroda_web/src/render/: mod.rs  source.rs
crates/priroda_web/src/watch/: mod.rs
resources/: positioning.css  style-default.css  style.css
src/: commands.rs  graphviz.rs  main.rs  step.rs  watch.rs
src/render/: graphviz.rs  locals.rs  mod.rs  source.rs
src/watch/: mod.rs  stack_trace.rs
