[package]
authors = ["Oliver Schneider <priroda-tsm-i-77ksi-11f77i@oli-obk.de>"]
description = "A graphical debugger for Rust MIR."
license = "MIT/Apache-2.0"
name = "priroda"
repository = "https://github.com/oli-obk/priroda"
version = "0.1.0"
edition = "2018"


[dependencies]
regex = "1.3"
lazy_static = "1.4.0"
rocket = "0.4.7"
# This needs to be the version of miri for the nightly in the `rust-toolchain` file
miri = { git = "https://github.com/rust-lang/miri.git", rev = "ea86335318fd06ec964d9a86b187995bda1b6c7d" }

log = "0.4"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

open = "1.4.0"
promising-future = "0.2"
syntect = "4.2"
horrorshow = "0.8"
cgraph = { git = "https://github.com/oli-obk/cgraph.git", rev = "b65e460ee323b31dca55b5541141a6b73272e72a" }

# Uncomment to use local checkout of miri
# [patch."https://github.com/rust-lang/miri.git"]
# miri = { path = "../miri" }

[features]
static_resources = []
