[package]
name = "priroda_web"
license = "MIT/Apache-2.0"
description = "A graphical debugger for Rust MIR."
repository = "https://github.com/oli-obk/priroda"
version = "0.1.0"
authors = ["Oliver Schneider <priroda-tsm-i-77ksi-11f77i@oli-obk.de>"]
edition = "2018"

[dependencies]
regex = "1.3"
lazy_static = "1.4.0"
rocket = "0.4.7"
# This needs to be the version of miri for the nightly in the `rust-toolchain` file
miri = { git = "https://github.com/rust-lang/miri.git", rev = "ae964207bb17911cf96d9744d9469fa2734093a8" }

log = "0.4"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

open = "1.4.0"
promising-future = "0.2"
syntect = "4.2"
horrorshow = "0.8"
cgraph = { git = "https://github.com/oli-obk/cgraph.git", rev = "7348380f014fe87338cdcd4d2f22cbda771ae21d" }

# Uncomment to use local checkout of miri
# [patch."https://github.com/rust-lang/miri.git"]
# miri = { path = "../../miri" }


[features]
static_resources = []


[package.metadata.rust-analyzer]
rustc_private = true
